build: add PMD to verify phase and fix violations. Curated ruleset (error-prone, performance, multithreading, selected best practices). Noisy/opinionated and project-pattern rules are excluded with documented reasons (generic-exception boundary catches, sentinel-null index/config lookups, long-lived resources, vendored LinkedTreeMap serialization, empty catch already covered by Checkstyle). Real fixes applied (MissingOverride, unused assignments, locale-aware case conversion, isBlank, double-brace init, etc.); intentional test patterns suppressed with // NOPMD.